--- a/base_ubuntu18.04_cuda10.0/dot_devcontainer/devcontainer.json
+++ b/base_ubuntu18.04_cuda10.0/dot_devcontainer/devcontainer.json
@@ -19,7 +19,6 @@
     ]
 
     // Remote-Container
-    //"workspaceMount": "source=/data/songming/vsc-remote,target=/workspace,type=bind,consistency=cached",
     "workspaceFolder": "/workspace",
     "workspaceMount": "source=remote-workspace,target=/workspace,type=volume",
 
@@ -31,10 +30,10 @@
 
     // Uncomment to use the Docker CLI from inside the container. See https://aka.ms/vscode-remote/samples/docker-in-docker.
     "mounts": [ 
-        "source=/data/songming/vsc-remote/GPPDuCUDA,target=/home/songming/GPPDuCUDA,type=bind,consistency=cached",
-        "source=vsc-remote-extensions,target=/home/songming/.vscode-server/extensions,type=volume",
+        "source=/data/songming/vsc-remote/GPPDuCUDA,target=/workspace/GPPDuCUDA,type=bind,consistency=cached",
+        "source=vsc-remote-extensions,target=/root/.vscode-server/extensions,type=volume",
         // And/or for VS Code Insiders
-        "source=vsc-insiders-remote-extensions,target=/home/songming/.vscode-server-insiders/extensions,type=volume",
+        "source=vsc-insiders-remote-extensions,target=/root/.vscode-server-insiders/extensions,type=volume",
     ],
 
     // Uncomment when using a ptrace-based debugger like C++, Go, and Rust
