--- a/vsc_remote_containers/ubuntu18.04_cuda10.0/.devcontainer/devcontainer.json
+++ b/vsc_remote_containers/ubuntu18.04_cuda10.0/.devcontainer/devcontainer.json
@@ -3,6 +3,7 @@
 {
     "name": "CUDA10.0 Ubuntu 18.04 & Git & VIM & Anaconda3 & CMake",
     "dockerFile": "Dockerfile",
+    "runArgs": [ "--cap-add=SYS_PTRACE", "--security-opt", "seccomp=unconfined"],
 
     // Set *default* container specific settings.json values on container create.
     "settings": {
