--- a/vsc_remote_containers/ubuntu18.04/.devcontainer/Dockerfile
+++ b/vsc_remote_containers/ubuntu18.04/.devcontainer/Dockerfile
@@ -9,7 +9,7 @@ FROM gnosoir/ubuntu:bionic-devel
 
 ENV DEBIAN_FRONTEND=noninteractive
 
-RUN apt-get install gdb
+RUN apt-get install gdb -y
 # Clean up
 #RUN apt-get autoremove -y \
 #   && apt-get clean -y \
